multi-cluster-scale/manifests/policy-reporter/deployment-policy-reporter-ui.yaml
# Source: policy-reporter/charts/ui/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: policy-reporter-ui
  namespace: policy-reporter
  labels:
    helm.sh/chart: ui-2.10.2
    app.kubernetes.io/name: ui
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/version: "1.9.1"
    app.kubernetes.io/component: ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: policy-reporter
spec:
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/name: ui
      app.kubernetes.io/instance: policy-reporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: ui
        app.kubernetes.io/instance: policy-reporter
        helm.sh/chart: ui-2.10.2
        app.kubernetes.io/version: "1.9.1"
        app.kubernetes.io/part-of: policy-reporter
        team: security
      annotations:
        checksum/config: "7925e80cd7c8756c851b8b24d2120df3cc1bf8bfd9ca8eece34f76ec3346b2a7"
    spec:
      serviceAccountName: policy-reporter-ui
      automountServiceAccountToken: true
      containers:
        - name: ui
          image: "ghcr.io/kyverno/policy-reporter-ui:1.9.1"
          imagePullPolicy: IfNotPresent
          securityContext: 
            
            allowPrivilegeEscalation: false
            capabilities:
              drop:
              - ALL
            privileged: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 1234
            seccompProfile:
              type: RuntimeDefault
          args:
            - -config=/app/config.yaml
            - -policy-reporter=http://policy-reporter:8080
            - -kyverno-plugin=http://policy-reporter-kyverno-plugin:8080
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
          readinessProbe:
            httpGet:
              path: /
              port: http
          volumeMounts:
          - name: config-file
            mountPath: /app/config.yaml
            subPath: config.yaml
            readOnly: true
          resources:
            {}
      volumes:
      - name: config-file
        configMap:
          name: policy-reporter-ui-config
