multi-cluster-scale/manifests/policy-reporter/service-policy-reporter-kyverno-plugin.yaml
# Source: policy-reporter/charts/kyvernoPlugin/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: policy-reporter-kyverno-plugin
  namespace: policy-reporter
  labels:
    helm.sh/chart: kyverno-plugin-1.6.2
    app.kubernetes.io/name: kyverno-plugin
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/version: "1.6.1"
    app.kubernetes.io/component: plugin
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: policy-reporter
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: rest
      protocol: TCP
      name: rest
  selector:
    app.kubernetes.io/name: kyverno-plugin
    app.kubernetes.io/instance: policy-reporter
