multi-cluster-scale/manifests/policy-reporter/ingress-policy-reporter-ui.yaml
# Source: policy-reporter/charts/ui/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-reporter-ui
  namespace: policy-reporter
  labels:
    helm.sh/chart: ui-2.10.2
    app.kubernetes.io/name: ui
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/version: "1.9.1"
    app.kubernetes.io/component: ui
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: policy-reporter
spec:
  rules:
    - host: "policies.suderman.us.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: policy-reporter-ui
                port:
                  number: 8080
