multi-cluster-scale/manifests/policy-reporter/ingress-policy-reporter.yaml
# Source: policy-reporter/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-reporter
  namespace: policy-reporter
  labels:
    helm.sh/chart: policy-reporter-2.21.3
    app.kubernetes.io/name: policy-reporter
    app.kubernetes.io/instance: policy-reporter
    app.kubernetes.io/version: "2.17.4"
    app.kubernetes.io/component: reporting
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: policy-reporter
spec:
  rules:
    - host: "policies.suderman.us.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: policy-reporter
                port:
                  number: 8080
